<resources>
    <string name="facebook_app_id">2004900292925695</string>
    <string name="fb_login_protocol_scheme">fb2004900292925695</string>

    <string name="app_name">BuscandoKsas</string>
    <string name="open_nav">Open Navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>

    <string name="patio">Patio:</string>
    <string name="balcon">Balcon:</string>
    <string name="barrio">Barrio:</string>
    <string name="m">m²:</string>
    <string name="dormitorios">Dormitorios:</string>
    <string name="banos">Baños:</string>
    <string name="garage">Estacionamiento:</string>
    <string name="parrillero">Parrillero:</string>
    <string name="search_title">Busqueda</string>
    <string name="filter_search">Filtro</string>
    <string name="favorites_title">Favoritos</string>
    <string name="configuracion">Configuracion</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="terms">Terminos y condiciones</string>
    <string name="ayuda">Ayuda</string>
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="favoritos">Favoritos</string>
    <string name="apply">Aplicar</string>
    <string name="close_filter_btn">X</string>

    <string name="cantidad_de_habitaciones">Cantidad de habitaciones:</string>
    <string name="con_parrillero">Con Parrillero</string>
    <string name="con_garage">Con garage</string>
</resources>
