<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".model.fragment.HouseDetail"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="?android:attr/actionBarSize">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/images_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
            app:layout_constraintTop_toTopOf="parent">

        </android.support.v7.widget.RecyclerView>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/relative_layout_house_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/house_home_image_view">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- Barrio -->
                    <LinearLayout
                        android:id="@+id/linear_layout_barrio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/barrio"
                            android:textColor="#666"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/txt_house_detail_barrio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:textColor="#666"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <!-- metraje -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/m"
                            android:textColor="#666"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/txt_house_detail_metraje"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            android:layout_marginStart="6dp"
                            android:textColor="#666"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <!-- Dormitorios -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dormitorios"
                            android:textColor="#666"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/txt_house_detail_cant_dormitorios"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            android:layout_marginStart="6dp"
                            android:textColor="#666"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <!-- baños -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/banos"
                            android:textColor="#666"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/txt_house_detail_banos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            android:layout_marginStart="6dp"
                            android:textColor="#666"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="fill_horizontal"
                        android:orientation="horizontal"
                        android:textAlignment="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/garage"
                            android:textColor="#666"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/txt_house_detail_garage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginStart="4dp"
                            android:textColor="#666"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            android:layout_marginStart="6dp"
                            android:text="@string/parrillero"
                            android:textColor="#666"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/txt_house_detail_parrillero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginStart="4dp"
                            android:textColor="#666"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            android:layout_marginStart="6dp"
                            android:text="@string/balcon"
                            android:textColor="#666"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/txt_house_detail_balcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginStart="4dp"
                            android:textColor="#666"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            android:layout_marginStart="6dp"
                            android:text="@string/patio"
                            android:textColor="#666"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/txt_house_detail_patio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_marginStart="4dp"
                            android:textColor="#666"
                            android:textSize="12sp" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txt_house_detail_precio"
                        android:layout_width="82dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/price_bkg"
                        android:textAlignment="center"
                        android:textColor="#fec917"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>


            </RelativeLayout>

        </ScrollView>

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapView"

            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
    </LinearLayout>
</ScrollView>